--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /iPodInventoryProblem/obj/Debug
 /iPodInventoryProblem/bin/Debug
 /iPodInventoryProblem/.vs/iPodInventoryProblem/v15
+/iPodInventoryProblem/packages
+/iPodInventoryProblemTest/obj/Debug
+/iPodInventoryProblemTest/bin/Debug
